# video-moment-finder

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SPEC.md  README.md  RESEARCH_QWEN3_VL.md  ROADMAP.md  STATUS.md  main.py  modal_search_test.py  modal_smoke_qwen3.py  modal_video_test.py  pyproject.toml
.claude/: settings.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/video/[id]/: page.tsx
scripts/phase0/: modal_search_test.py  modal_smoke_qwen3.py  modal_video_test.py
scripts/phase1/: modal_batch_embed.py  storage_integration_test.py  storage_local_test.py
src/api/: app.py
src/config/: env.py
src/db/: __init__.py  supabase.py
src/embedding/: batch.py  modal_app.py
src/pipeline/: __init__.py  orchestrator.py
src/storage/: __init__.py  config.py  qdrant.py  r2.py
src/utils/: cleanup.py  logging.py  subprocess.py
src/video/: __init__.py  download.py  frames.py
test_data/search_validation/: reachy_unboxing.json
tests/db/: test_supabase.py
tests/pipeline/: test_orchestrator.py
tests/storage/: test_qdrant.py  test_r2.py
tests/utils/: test_cleanup.py
