[project]
name = "video-moment-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.3.0.post1",
    "transformers>=4.57.0",
    "qwen-vl-utils>=0.0.14",
    "numpy",
    "pillow",
    "torch",
    "torchvision",
]
