[project]
name = "video-moment-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.3.0.post1",
    "transformers>=4.57.0",
    "qwen-vl-utils>=0.0.14",
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "yt-dlp>=2025.12.8",
    "opencv-python>=4.13.0.90",
    "qdrant-client>=1.16.2",
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "supabase>=2.27.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
